# pygeodata

./: environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml  test.yml
data_framework/: __init__.py  data_entry.py  errors.py  load_data.py  loader_registry.py  paths.py  raster_loader.py  reproject.py  types.py  utils.py  xarray.py
pygeodata/: __init__.py  base.py  config.py  load.py  loader.py  options.py  paths.py  types.py
pygeodata/drivers/: __init__.py  rioxarray.py  xarray.py
pygeodata/processors/: __init__.py  rasterizer.py  reprojection.py
tests/: conftest.py  test_file_loading.py  test_loader.py  test_raster_data_entry.py  test_raster_loader.py
tests/drivers/: test_rioxarray_driver.py
tests/processors/: test_rasterizer.py  test_reprojection.py
