[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeodata"
description = "Lightweight framework for geospatial data access and processing"
version = "0.0.1"
authors = [
    { name = "Jasper Roebroek", email = "roebroek.jasper@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "rioxarray",
    "geopandas",
    "dask",
    "zarr"
]

[tool.setuptools.packages.find]
include = ["pygeodata*"]

[project.optional-dependencies]
test = ["pytest"]
