[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeodata"
description = "Lightweight framework for geospatial data access and processing"
authors = [
    { name = "Jasper Roebroek", email = "roebroek.jasper@gmail.com" }
]
version = "0.0.2"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "rioxarray",
    "geopandas",
    "dask",
    "zarr"
]

[tool.setuptools.packages.find]
include = ["pygeodata*"]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]
